--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         res.qrc
         mypushbutton.h mypushbutton.cpp
+        chooselevelscene.h chooselevelscene.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET CoinFilp APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
