--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         res.qrc
         mypushbutton.h mypushbutton.cpp
         chooselevelscene.h chooselevelscene.cpp
+        playscene.h playscene.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET CoinFilp APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
