Finish the button icon to invert animation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         mypushbutton.h mypushbutton.cpp
         chooselevelscene.h chooselevelscene.cpp
         playscene.h playscene.cpp
+        mycoin.h mycoin.cpp
+        dataconfig.h dataconfig.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET CoinFilp APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
